--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -354,7 +354,7 @@
                                             </ul><!-- .nk-menu-sub -->
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
-                                            <a href="{% url 'tools:new_conversation' %}" class="nk-menu-link">
+                                            <a href="{% url 'tools:chatlist' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-msg"></em></span>
 
                                                 <span class="nk-menu-text">AI Chat</span><span class="nk-menu-badge">New</span>
