--- a/templates/dashboard/chat/index.html
+++ b/templates/dashboard/chat/index.html
@@ -28,31 +28,33 @@
                     </div><!-- .nk-block-head -->
                     <div class="nk-block">
                         <ul class="sp-pdl-list">
-    {% for a in conversations %}
-    <li class="sp-pdl-item">
-        <div class="sp-pdl-desc">
-            <div class="sp-pdl-info">
-                <h6 class="sp-pdl-title"><span class="sp-pdl-name">{{ a.title }}</span></h6>
-                <div class="sp-pdl-meta">
-                    <span class="version">
-                        <span class="text-soft">ID: </span> <span>{{ a.uuid }}</span>
-                    </span>
-                    <span class="release">
-                        <span class="text-soft">Created Date: </span> <span>{{ a.created_at | date:"Y-m-d H:i"}}</span>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="sp-pdl-btn">
-            <a href="{{ a.full_path }}" class="btn btn-primary">Continue Chat</a>
-            <button class="btn btn-danger delete-btn" data-uuid="{{ a.uuid }}">
-                <i class="fas fa-trash-alt"></i> Delete
-            </button>
-        </div>
-    </li><!-- .sp-pdl-item -->
-    {% endfor %}
-</ul><!-- .sp-pdl-list -->
-                    </div><!-- .nk-block -->
+                            {% for a in conversations %}
+                            <li class="sp-pdl-item">
+                                <div class="sp-pdl-desc">
+                                    <div class="sp-pdl-info">
+                                        <a href="{{ a.full_path }}"><h6 class="sp-pdl-title" ><span class="sp-pdl-name">{{ a.title }}</span></h6></a>
+                                        <div class="sp-pdl-meta">
+                                            <span class="version">
+                                                <span class="text-soft">ID: </span> <span>{{ a.uuid }}</span>
+                                            </span>
+                                            <span class="release">
+                                                <span class="text-soft">Created Date: </span> <span>{{ a.created_at | date:"Y-m-d H:i"}}</span>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sp-pdl-btn">
+                                    <button class="btn btn-warning clear-btn" data-uuid="{{ a.uuid }}">
+                                        <i class="fas fa-eraser"></i> Clear
+                                    </button>
+                                    <button class="btn btn-danger delete-btn" data-uuid="{{ a.uuid }}">
+                                        <i class="fas fa-trash-alt"></i> Delete
+                                    </button>
+                                </div>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                     <div class="nk-block nk-block-lg">
                         <div class="card card-bordered">
                             <div class="card-inner">
@@ -75,4 +77,83 @@
     </div>    
     <!-- footer @e -->
 </div>
+<!-- Confirmation Modal -->
+<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to perform this action?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="confirmActionBtn">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block js %}
+<script>
+$(document).ready(function() {
+    $('.delete-btn, .clear-btn').click(function() {
+        var uuid = $(this).data('uuid');
+        var action = $(this).hasClass('delete-btn') ? 'delete' : 'clear';
+        var modalBody = action === 'delete' ? 
+            'Are you sure you want to delete this conversation?' :
+            'Are you sure you want to clear all messages in this conversation?';
+        
+        $('#confirmationModal .modal-body').text(modalBody);
+        $('#confirmActionBtn').data('uuid', uuid).data('action', action);
+        $('#confirmationModal').modal('show');
+    });
+
+    $('#confirmActionBtn').click(function() {
+        var uuid = $(this).data('uuid');
+        var action = $(this).data('action');
+        var url = action === 'delete' ? 
+            "{% url 'tools:delete_conversation' conversation_uuid='00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000', uuid) :
+            "{% url 'tools:clear_conversation' conversation_uuid='00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000', uuid);
+
+        $.ajax({
+            url: url,
+            method: 'POST',
+            headers: {
+                'X-CSRFToken': getCookie('csrftoken')
+            },
+            success: function(response) {
+                if (response.success) {
+                    location.reload();
+                } else {
+                    alert('An error occurred. Please try again.');
+                }
+            },
+            error: function() {
+                alert('An error occurred. Please try again.');
+            }
+        });
+
+        $('#confirmationModal').modal('hide');
+    });
+
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+});
+</script>
 {% endblock %}
