--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -210,7 +210,7 @@
     </div>
     <div class="dropdown-inner">
         <ul class="link-list">
-            <li><a href="{% url 'logout' %}"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
+            <li><a href="{% url 'account_logout' %}"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
         </ul>
     </div>
 </div>
